@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!--Generated with glade3 3.4.3 on Sun Mar 23 19:31:13 2008 -->
+<!--Generated with glade3 3.4.3 on Sun Mar 23 19:49:39 2008 -->
 <interface>
   <object class="GtkWindow" id="compras_gui">
     <property name="title" translatable="yes">Rizoma POS Comercio: Compras</property>
@@ -35,9 +35,10 @@
                           </object>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry1">
+                          <object class="GtkEntry" id="buy_barcode_entry">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <signal handler="on_buy_barcode_entry_activate" name="activate"/>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
